# emotiv-lsl

./: .gitignore  README.md  emotiv-lsl.code-workspace  emotiv_lsl.spec  implementation_plan.md  main.py  main.spec  pyproject.toml
.github/workflows/: build.yml
cpp/: CMakeLists.txt
cpp/src/: config.h  emotiv_base.cpp  emotiv_base.h  emotiv_epoc_x.cpp  emotiv_epoc_x.h  main.cpp
scripts/: build_macOS_app.py
