[project]
name = "emotiv-lsl"
version = "0.1.6"
description = "LSL server for Emotiv EPOC X, much more modern than others (~2025) "
readme = "README.md"
requires-python = ">=3.9.13"
dependencies = [
    "cython>=3.1.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "mne-qt-browser>=0.6.1",
    "mne[hdf5]>=1.6.1",
    "plotly>=6.2.0",
    "pycryptodome>=3.23.0",
    "pylsl>=1.16.2",
    "seaborn>=0.13.2",
    "setuptools>=75.3.2,<81",
    "wheel>=0.45.1",
    "pyqt5>=5.15.7,<6; platform_machine != 'aarch64' or sys_platform != 'linux'",
    "pyqt5-qt5==5.15.2; platform_machine != 'aarch64' or sys_platform != 'linux'",
    "pyshark>=0.6",
    "scipy>=1.10.1",
    "attrs>=22.2.0",
    "pyinstaller>=6.14.2",
    "pyqtgraph>=0.13.3",
    "phopylslhelper",
    "hid==1.0.4",
    "influxdb-client>=1.49.0",
    "numpy>=2.0.2",
    "lab-recorder-python",
]

[tool.uv.sources]
phopylslhelper = { path = "../PhoPyLSLhelper", editable = true }
lab-recorder-python = { path = "../lab-recorder-python", editable = true }
bsl = { path = "../bsl", editable = true }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-aarch64", "osx-64", "linux-64"]

[tool.pixi.target.win-64.dependencies]
liblsl = "*"

[tool.pixi.pypi-dependencies]
phopylslhelper = { git = "https://github.com/CommanderPho/phopylslhelper.git" }
lab-recorder-python = { path = "../lab-recorder-python", editable = true }

